# eindjeboss

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  bot.py  developer_guide.md  fly.toml  pyproject.toml  requirements.txt  test.py  test2.py
.github/workflows/: codeql.yml  fly.yml  gitleaks.yml
cogs/: admin.py  bard.py  bonk.py  casino.py  events.py  exceptionhandler.py  f1.py  facts.py  games.py  gpt.py  help.py  images.py  imdb.py  maps.py  modmail.py  msgs.py  music.py  periodics.py  polls.py  reddit.py  reminder.py  roles.py  stats.py  tickets.py  translate.py  utilities.py  weather.py  wiki.py
default_files/: help.json
model/: event.py  reminder.py  ticket.py  user.py
util/: db.py  util.py
util/vars/: eind_vars.py  periodic_reminders.py  periodics.py  role_vars.py
vars/: eind_vars.py  periodic_reminders.py
